--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -109,6 +109,7 @@
                         Base Discount: {{ cart.baseDiscount|commerceCurrency(cart.currency) }}<br>
                         Base Shipping Cost: {{ cart.baseShippingCost|commerceCurrency(cart.currency) }}<br>
                         Base Tax: {{ cart.baseTax|commerceCurrency(cart.currency) }}<br>
+                        Base Tax Included: {{ cart.baseTaxIncluded|commerceCurrency(cart.currency) }}<br>
                         <br>
                         Total Discount: {{ cart.totalDiscount|commerceCurrency(cart.currency) }}<br>
                         Total Shipping: {{ cart.totalShippingCost|commerceCurrency(cart.currency) }}<br>
