--- a/templates/shop/customer/order.html
+++ b/templates/shop/customer/order.html
@@ -1,4 +1,4 @@
-{% extends 'shop/_layouts/main' %}
+    {% extends 'shop/_layouts/main' %}
 
 {% set number = craft.request.param('number') %}
 {% set order = craft.commerce.orders.number(number).first() %}
@@ -21,7 +21,7 @@
                     <h4>Details</h4>
 
                     <ul>
-                        <li><strong>{{ "Customer"|t }}:</strong> {{ order.customer.email }}</li>
+                        <li><strong>{{ "Customer"|t }}:</strong> {{ order.email }}</li>
                         <li><strong>{{ "Total"|t }}:</strong> {{ order.totalPrice|commerceCurrency(cart.currency) }}</li>
                         <li><strong>{{ "Amount Paid"|t }}:</strong> {{ order.totalPaid|commerceCurrency(cart.currency) }}</li>
                         <li><strong>{{ "Date"|t }}:</strong> {{ order.dateOrdered }}</li>
