--- a/commerce/templates/orders/_edit.twig
+++ b/commerce/templates/orders/_edit.twig
@@ -437,8 +437,8 @@
 
 {% includejs %}
 
-window.countries = JSON.parse('{{ craft.commerce.countries|json_encode|raw }}');
-window.states = JSON.parse('{{ craft.commerce.states|json_encode|raw }}');
+window.countries = {{ craft.commerce.countries|values|json_encode|raw }};
+window.states = {{ craft.commerce.states|values|json_encode|raw }};
 
 $(document).ready(function () {
 
